--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
 		"@uiw/codemirror-theme-vscode": "^4.19.16",
 		"@uiw/react-codemirror": "^4.19.16",
 		"assert": "^2.0.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"eslint": "8.36.0",
 		"eslint-config-next": "13.2.4",
 		"firebase": "^9.23.0",
+		"lucide-react": "^0.475.0",
 		"next": "13.2.4",
 		"react": "18.2.0",
 		"react-confetti": "^6.1.0",
@@ -29,6 +32,8 @@
 		"react-toastify": "^9.1.2",
 		"react-youtube": "^10.1.0",
 		"recoil": "^0.7.7",
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "5.0.2"
 	},
 	"devDependencies": {
