--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	},
 	"dependencies": {
 		"@codemirror/lang-javascript": "^6.1.6",
+		"@radix-ui/react-progress": "^1.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@types/node": "18.15.3",
 		"@types/react": "18.0.28",
 		"@types/react-dom": "18.0.11",
@@ -18,13 +20,16 @@
 		"assert": "^2.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
 		"eslint": "8.36.0",
 		"eslint-config-next": "13.2.4",
 		"firebase": "^9.23.0",
 		"lucide-react": "^0.475.0",
 		"next": "13.2.4",
 		"react": "18.2.0",
+		"react-calendar": "^5.1.0",
 		"react-confetti": "^6.1.0",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "18.2.0",
 		"react-firebase-hooks": "^5.1.1",
 		"react-icons": "^4.8.0",
